# pagerduty-reliability-agent

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/agents/: my_agent.agent.md
.github/workflows/: ci.yml  release.yml  weekly-digest.yml
.sdlc/: context.yaml  sources.yaml
reliability_agent/: __init__.py  ai_insights.py  analytics.py  config.py  data_collector.py  email_sender.py  pagerduty_client.py  report_renderer.py
reliability_agent/templates/: weekly_digest.html
tests/: conftest.py  test_ai_insights.py  test_analytics.py  test_cli.py  test_config.py  test_data_collector.py  test_report_renderer.py
tests/fixtures/: sample_aggregated.json  sample_incidents.json  sample_services.json
