[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pagerduty-reliability-agent"
dynamic = ["version"]
description = "Weekly reliability digest generator from PagerDuty data with AI-powered insights"
readme = {text = "Weekly reliability digest generator from PagerDuty data with AI-powered insights", content-type = "text/plain"}
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "httpx>=0.27,<1.0",
    "github-copilot-sdk",
    "jinja2>=3.1,<4.0",
    "python-dotenv>=1.0,<2.0",
    "tenacity>=8.2,<10.0",
    "click>=8.1,<9.0",
    "pydantic>=2.5,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "structlog>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.4",
]

[project.scripts]
reliability-digest = "main:cli"

[tool.hatch.version]
path = "reliability_agent/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["reliability_agent", "main.py"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
disallow_untyped_defs = true
warn_return_any = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
